Renamed jade template var 'client' to 'myclient' due to error (on reserved word?).

--- a/app/views/clients/new.jade
+++ b/app/views/clients/new.jade
@@ -2,3 +2,7 @@ extends form
 prepend content
   h2 clients/new.jade
   h1= headline
+  form(method='post')
+    label.control-label(for='company') Company
+    .controls
+      input(type='text',name='company',placeholder='Company',value='#{myclient.company}')
